--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@
   --fw-reg: 300;
   --fw-bold: 900;
 
-  --clr-light: #ffffff;
-  --clr-dark: #303030;
-  --clr-accent: #16e0bd;
+  --clr-light: #2E2E2E;
+  --clr-dark: #ffffff;
+  --clr-accent: #0F9ED5;
 
   --fs-h1: 3rem;
   --fs-h2: 2.25rem;
